--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,5 @@
   "background_color": "#fff",
   "display": "standalone",
   "scope": "/recipe-book/",
-  "theme_color": "#fff"
+  "theme_color": "#3b8776"
 }
